source/stylesheets/site.css.scss
@import 'variables';
@import 'typography';
@import 'forms';

.primary-button {
  background-color: $primary-color;
  color: white;
  border-radius: 5px;
  padding: $small-spacing $base-spacing;
  text-decoration: none;
}

.secondary-button {
  background-color: white;
  color: $primary-color;
  border: 1px solid $primary-color;
  border-radius: 5px;
  padding: $small-spacing $base-spacing;
  text-decoration: none;
}


body {
  background-color: $background-color;
  color: $base-font-color;
  font-family: "TTCommons", -apple-system, sans-serif;
  margin: 0;
  padding: 0;
  max-width: 100%;
  overflow-x: hidden;
}

a, strong {
  color: $primary-color;
}

nav.navigation {
  border-bottom: 2px solid $primary-color;
  border-color: $primary-color;
  color: $primary-color;
  display: block;
  max-height: $navigation-height;
  padding: $small-spacing;

  ul {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: flex-start;
    padding: 0;
    margin: 0;
    list-style: none;

    li {
      margin-right: $small-spacing;
    }

    li.logo {
      display: flex;
      flex-flow: row nowrap;
      align-items: center;
      justify-content: flex-start;
      margin-left: $small-spacing;
      margin-right: auto;
      font-weight: 500;
      font-size: 2em;

      img {
        height: 48px;
        max-height: $navigation-height;
        width: auto;
        margin-right: 0;
        margin-bottom: 5px;
      }

      @media screen and (max-width: 700px) {
        margin-left: 0;
        font-size: 1.25em;

        img {
          height: 36px;
        }
      }
    }
  }
}

section.main {
  max-width: $large-screen;
  margin: 0 auto;
  display: block;
  padding: 0 $small-spacing;
}

section.segment {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  margin: $base-spacing 0;
  margin-bottom: $base-spacing * 2;

  figure {
    max-width: 100%;
    margin: 0 $base-spacing;

    img {
      width: 128px;
      margin: 0 auto;
    }
  }

  section.copy {
    padding: 0 $base-spacing;
    width: 100%;

    h2 {
      text-align: center;
      margin-top: $small-spacing;
    }
  }


  @media screen and (min-width: $large-screen) {
    flex-flow: row nowrap;
    align-items: flex-start;
    justify-content: center;

    figure {
      margin-top: $base-spacing;
    }

    section.copy {
      h2 {
        text-align: left;
      }
    }
  }
}

section#hero {
  height: 70vh;
  margin-bottom: 15vh !important;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  margin: $base-spacing 0;
  margin-bottom: $base-spacing * 2;

  section.links {
    display: flex;
    margin-top: $base-spacing;
    margin-bottom: $base-spacing;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-around;

    a {
      margin: 0 $small-spacing;
    }
  }
}


footer {
  margin-top: $base-spacing * 3;
  min-height: 40vh;
  background-color: darken($primary-color, 10);
  padding: $base-spacing;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-around;

  ul {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: center;
    list-style: none;
    margin: 0;
    margin-left: 0;
    padding-inline-start: 0px;

    li {
      margin-bottom: $small-spacing;

      a {
        text-decoration: none;
        color: white;
      }
    }
  }
}

